sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value getNombreValeur
      for (j<-0 to getNombreValeur()-1){
                   ^