sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var c = 0
  while (c!=getNombreValeurs()){
    for (k<-getNombreValeurs()-1 to 0){
      for (j<-0 to getNombreValeur()-1){
        if (!plusPetit(k,j))
          echange(k,j)
        }
      }
  c=c+1
  }
}